# 3DChessGame

./: Board.cpp  Board.h  BoardLogic.cpp  BoardLogic.h  CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Graphics.cpp  Graphics.h  LegalSpacesBoard.cpp  LegalSpacesBoard.h  ObjModel.cpp  ObjModel.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  main.cpp  tigl.cpp  tigl.h
Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Resources/Bishop/: bishop.mtl
Resources/King/: king.mtl
Resources/Knight/: knight.mtl
Resources/Pawn/: pawn.mtl
Resources/Queen/: queen.mtl
Resources/Rook/: rook.mtl
Tests/: BoardLogicTest.cpp
